# rsume

./: .gitignore  .gitmodules  Cargo.toml  justfile
src/: errors.rs  generator.rs  main.rs  resume.rs  templates.rs  themes.rs
templates/: general-purpose.typ
testdata/: sample.resume.json  sample.resume.yaml
themes/: default.yaml
