[package]
name = "resume-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = { version = "4.4", features = ["derive", "env"] }
json-resume = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tempdir = "0.3"
thiserror = "1.0"
#typst_cli = { git = "https://github.com/typst/typst/crates/typst-cli" }
typst-cli = { path = "/home/wayne/projects/typst/crates/typst-cli" }
typst-library = { path = "/home/wayne/projects/typst/crates/typst-library" }
